--- a/server/client/public/index.html
+++ b/server/client/public/index.html
@@ -20,6 +20,13 @@
       crossorigin="anonymous"
     />
 
+    <style type="text/css">
+      
+  </style>
+
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/rikmms/progress-bar-4-axios/0a3acf92/dist/nprogress.css" />
+
+
     <title>React App</title>
   </head>
   <body>
